--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="author" content="Noelle Dacayo & Manu Sugunakumar">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Noelle Dacayo">
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <title>Home</title>
 
     <!-- CSS Section -->
@@ -14,66 +17,19 @@
 
 </head>
 <body>
-<div id="page-container">
+
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="index.html"><i class="fa-solid fa-people-roof"></i> Harmony Hub</a>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul id="NavBar" class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html"><i class="fa-solid fa-house"></i> Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="portfolio.html"><i class="fa-solid fa-scroll"></i> Portfolio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="service.html"><i class="fa-regular fa-heart"></i> Services</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="team.html"><i class="fa-solid fa-people-group"></i> Team</a>
-                        </li>
-                        <li class="nav-item">
-                            <a id="BlogNav" class="nav-link" href="blog.html"><i class="fa-solid fa-book"></i> Blog</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+
     </header>
 
-    <div id="background-overlay">
-        <!-- Video container -->
-        <video autoplay loop muted class="video-background">
-            <source src="pictures/1655962330-1655962330-return-to-valorant-city-star-guardian-live-wallpaper.mp4" type="video/mp4">
-        </video>
-    </div>
-<!--Yellow-->
-<!--#fceea4-->
-
-<!--Brown-->
-<!--#ba7966-->
-
-    <!-- Main content -->
     <main class="container">
-        <h1 class="centered-heading">Welcome to the Harmony Hub</h1>
+        <h1 class="mb-5">Welcome to our Web Site</h1>
+        <button id="AboutUsBtn" class="btn btn-primary">About Us</button>
     </main>
-</div>
 
-<footer>
-    <nav class="navbar fixed-bottom bg-body-tertiary">
-        <div class="container-fluid" id="footer">
-            <a class="nav-link" href="./privacypolicy.html">Privacy Policy</a>
-            <a class="nav-link" href="./tos.html">Terms of Service</a>
-            <a class="nav-link" href="./contact.html">Contact</a>
-        </div>
-    </nav>
-</footer>
-
-<!-- Scripting Section -->
-<script src="scripts/app.js"></script>
-<script src="./node_modules/jquery/dist/jquery.js"></script>
-<script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Scripting Section -->
+    <script src="./node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="./scripts/app.js"></script>
 </body>
 </html>
-
