--- a/service.html
+++ b/service.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="author" content="Noelle Dacayo & Manu Sugunakumar">
+    <meta name="author" content="Noelle Dacayo">
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -19,221 +19,16 @@
 <body>
 
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="index.html"><i class="fa-solid fa-people-roof"></i> Harmony Hub</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul id="NavBar" class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link" href="index.html"><i class="fa-solid fa-house"></i> Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="portfolio.html"><i class="fa-solid fa-scroll"></i> Portfolio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="service.html"><i class="fa-regular fa-heart"></i> Services</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="team.html"><i class="fa-solid fa-people-group"></i> Team</a>
-                        </li>
-                        <li class="nav-item">
-                            <a id="BlogNav" class="nav-link" href="blog.html"><i class="fa-solid fa-book"></i> Blog</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+
     </header>
 
     <div class="container">
-        <h1 class="title">Services</h1>
-
-    </div>
-    <div class="accordion accordion-flush" id="accordionFlushExample">
-        <div class="accordion-item">
-            <h2 class="accordion-header">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                    <i class="fa-solid fa-building-wheat"></i> Local Business Showcase
-                </button>
-            </h2>
-            <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body">
-                    The Harmony Hub is a vibrant, community center that aims to offer a range of services and activities to people of all ages and backgrounds.
-                    It's a place where technology meets community service, providing resources like classes, events, workshops, and community projects.
-                    Your web application will serve as an interactive portal for the Harmony Hub, showcasing its offerings, engaging the community, and
-                    facilitating online interactions<br><br>
-                    <strong>Business Profiles:</strong><br>
-                    Each local business can create a detailed profile showcasing their offerings, location, contact information, and a brief overview of their story.
-                    Integration of multimedia elements like images and videos to provide a visual representation of the business.<br><br>
-
-                    <strong>Product and Service Listings:</strong><br>
-                    Businesses can feature their products or services with comprehensive descriptions, pricing details, and any ongoing promotions or discounts.
-                    An intuitive search and filter system for users to easily discover and explore local offerings.<br><br>
-
-                    <strong>Featured Business Spotlights:</strong><br>
-                    Regularly highlight select businesses through featured spotlights on the main page of the platform.
-                    In-depth interviews, success stories, or behind-the-scenes looks to humanize the businesses and connect with the community on a personal level.<br><br>
-
-                    <strong>Collaborative Initiatives:</strong><br>
-                    Facilitate collaborative projects among local businesses to enhance community engagement and boost economic development.
-                    Examples include joint promotions, themed events, or community challenges that involve multiple businesses working together.<br><br>
-
-                    <strong>Event Promotion:</strong><br>
-                    Allow businesses to promote their upcoming events, sales, or special occasions on a shared community calendar.
-                    Integration with the main community events calendar for broader visibility.<br><br>
-
-                    <strong>Local Business Network:</strong><br>
-                    Create a networking space where local business owners can connect, share insights, and collaborate on ideas.
-                    Virtual meetups or forums specifically tailored for business-related discussions and support.<br><br>
-
-                    <strong>Economic Impact Tracker:</strong><br>
-                    Implement a tool to measure and showcase the economic impact of community support on local businesses.
-                    Statistics and infographics illustrating the positive outcomes of collaborative initiatives and community engagement.<br><br>
-                </div>
-            </div>
-        </div>
-        <div class="accordion-item">
-            <h2 class="accordion-header">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo" >
-                    <i class="fa-solid fa-school"></i>Interactive Classes
-                </button>
-            </h2>
-            <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body">
-                    Establish a comprehensive Virtual Learning Hub within the Harmony Hub's web application,
-                    offering a diverse range of educational content and expert-led workshops.
-                    This hub aims to empower community members with knowledge, skills, and personal development opportunities.<br><br>
-
-                    <strong>Subject Diversity:</strong><br>
-                    Curate a broad spectrum of virtual learning sessions covering technology, arts, wellness, personal development, and more.
-                    Engage expert instructors, professionals, and educators to deliver engaging and informative content.<br><br>
-
-                    <strong>Skill-Level Differentiation:</strong><br>
-                    Categorize learning sessions and workshops based on skill levels, ensuring content is accessible and beneficial for beginners, intermediate learners, and advanced participants.
-                    Clearly outline prerequisites and recommended background knowledge for each session.<br><br>
-
-                    <strong>Interactive Webinars:</strong><br>
-                    Host live webinars with interactive elements such as Q&A sessions, polls, and discussion forums to enhance engagement.
-                    Record and archive sessions for on-demand access, allowing users to revisit content or catch up if they miss a live session.<br><br>
-
-                    <strong>Certification Programs:</strong><br>
-                    Develop certification programs for participants to earn recognition for completing a series of related learning sessions or workshops.
-                    Collaborate with relevant accrediting bodies to provide recognized certifications for completed courses.<br><br>
-
-                    <strong>Expert-Led Workshops:</strong><br>
-                    Organize in-depth workshops facilitated by industry experts and professionals.
-                    Hands-on projects, case studies, and practical exercises to reinforce learning and skill development.<br><br>
-
-                    <strong>Learning Resources Library:</strong><br>
-                    Build a repository of learning resources, including articles, e-books, and supplementary materials, to complement virtual sessions.
-                    Allow users to contribute resources, creating a collaborative knowledge-sharing platform.<br><br>
-
-                    <strong>Progress Tracking and Personal Dashboards:</strong><br>
-                    Provide participants with personalized dashboards to track their progress, achievements, and upcoming sessions.
-                    Gamify the learning experience with badges, milestones, and rewards for completing certain levels of courses.<br><br>
-
-                    <strong>Community Collaboration Projects:</strong><br>
-                    Encourage collaborative projects arising from the virtual learning sessions, fostering a sense of community achievement.
-                    Project management tools to facilitate group collaboration and coordination.<br><br>
-
-                    <strong>Regular Learning Events Calendar:</strong><br>
-                    Maintain a calendar highlighting upcoming virtual learning sessions, workshops, and related events.
-                    Integrate with other areas of the Harmony Hub to cross-promote learning opportunities alongside community events and
-                    business initiatives.<br><br>
-
-                    <strong>Accessibility Features:</strong><br>
-                    Implement accessibility features such as closed captions, transcripts, and language options to make learning content
-                    inclusive and accessible to a diverse audience.<br><br>
-                </div>
-            </div>
-        </div>
-        <div class="accordion-item">
-            <h2 class="accordion-header">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                    <i class="fa-solid fa-laptop"></i>Tech Labs and Innovation Workshops
-                </button>
-            </h2>
-            <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body">
-                    Create a dynamic and immersive space within the Harmony Hub's web application dedicated to hands-on tech labs and
-                    innovation workshops. This space serves as a playground for community members to delve into cutting-edge technologies,
-                    coding, and engaging DIY projects.<br><br>
-
-                    <strong>Interactive Learning Modules:</strong><br>
-                    Develop interactive modules that cover various tech domains, including artificial intelligence, robotics,
-                    programming languages, and emerging technologies. Engaging tutorials with step-by-step instructions,
-                    real-world examples, and practical exercises.<br><br>
-
-                    <strong>DIY Project Showcase:</strong><br>
-                    Allow community members to showcase their completed DIY projects, fostering a culture of creativity and innovation.
-                    Ratings and comments enable the community to recognize and appreciate each other's work.<br><br>
-
-                    <strong>Collaborative Coding Sessions:</strong><br>
-                    Host live coding sessions where participants can collaborate in real-time on coding challenges,
-                    problem-solving, and software development. Version control and collaborative coding tools for seamless group participation.<br><br>
-
-                    <strong>Tech Challenges and Competitions:</strong><br>
-                    Organize tech challenges and competitions with varying difficulty levels, encouraging healthy competition
-                    and skill development. Recognition and prizes for outstanding achievements and contributions.<br><br>
-
-                    <strong>Virtual Reality (VR) Labs:</strong><br>
-                    Incorporate VR labs to explore immersive experiences in virtual environments, promoting understanding and
-                    creativity in tech-related concepts. VR coding environments for a unique and engaging learning experience.<br><br>
-
-                    <strong>Prototyping Tools and Simulators:</strong><br>
-                    Provide access to prototyping tools and simulators for hardware projects, allowing members to experiment
-                    with electronics and IoT concepts without physical components. Integration with virtual testing environments
-                    for safe experimentation.<br><br>
-
-                    <strong>Innovation Workshops:</strong><br>
-                    Facilitate expert-led innovation workshops, covering topics such as design thinking, product development,
-                    and ideation. Collaborative brainstorming sessions to generate and refine innovative ideas.<br><br>
-
-                    <strong>Tech Equipment Loan Program:</strong><br>
-                    Establish a program where community members can borrow tech equipment for a limited time to work on their
-                    projects. Guidelines and tutorials to ensure safe and responsible usage of borrowed equipment.<br><br>
-
-                    <strong>Expert-Led Webinars and Talks:</strong><br>
-                    Host webinars and talks featuring industry experts and professionals sharing insights, trends, and their
-                    experiences in the tech and innovation space. Opportunities for Q&A sessions and networking with the experts.<br><br>
-
-                    <strong>Protégé-Mentor Matching System:</strong><br>
-                    Create a mentorship program that pairs tech enthusiasts (protégés) with experienced professionals in the
-                    industry (mentors). Customizable profiles for mentors and protégés to facilitate effective matching based
-                    on skills, interests, and goals.<br><br>
-
-                    <strong>Mentorship Forums:</strong><br>
-                    Establish dedicated forums for mentorship pairs to connect, share progress, and seek advice.
-                    Regular check-ins and feedback mechanisms to ensure a positive and constructive mentorship experience.<br><br>
-
-                    <strong>Showcase Events:</strong><br>
-                    Organize periodic showcase events where community members can present their tech projects, innovations,
-                    or research findings. Networking opportunities for collaboration and feedback from peers and mentors.<br><br>
-                </div>
-            </div>
-        </div>
+        <h1 class="mb-5">Services</h1>
     </div>
 
-    <footer>
-        <nav class="navbar fixed-bottom bg-body-tertiary">
-            <div class="container-fluid" id="footer">
-                <a class="nav-link" href="./privacypolicy.html">Privacy Policy</a>
-                <a class="nav-link" href="./tos.html">Terms of Service</a>
-                <a class="nav-link" href="./contact.html">Contact</a>
-            </div>
-        </nav>
-    </footer>
-
-<!-- Scripting Section -->
-<script src="scripts/app.js"></script>
-<script src="./node_modules/jquery/dist/jquery.js"></script>
-<script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-
+    <!-- Scripting Section -->
+    <script src="./node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="./scripts/app.js"></script>
 </body>
 </html>
